# dotfiles

./: .gitmodules  .vimrc  Makefile  README.md  bashrc  gitconfig  gitconfig.codethink-stmp  gitconfig.in  gitignore  meson.build  morph-list-branches  profile  vimrc  wscript
applications/: joplin.desktop  planalyze.desktop
beets/: config.yaml
fish/: config.fish
flexget/: config.yml
nushell/: config.nu  env.nu
rhythmbox/: meson.build
speech-dispatcher/: coqui_say.sh  speechd.conf
speech-dispatcher/modules/: coqui_tts.conf
systemd/: container-coqui_tts.service  home-sam-External.mount  media-Quickball.mount  meson.build  sync-rhythmbox-playlists.path  sync-rhythmbox-playlists.service  sync-spotify-playlists.service  sync-spotify-playlists.timer  sync-youtube-playlists.service  sync-youtube-playlists.timer
temp/: tracker-talk.pinpoint
vim/UltiSnips/: c.snippets  python.snippets
vim/ftplugin/: c.vim  markdown.vim  python.vim  ruby.vim
